syntax = "proto3";

package gitInterface;

// ==== GitMessage ==== //
enum GitMessageType {
  INFO = 0;
  PACK = 1;
  VAULT_NAMES = 2;
}
message GitMessage {
  GitMessageType type = 1;
  bytes subMessage = 2;
}

// ==== Vault Info ==== //
message InfoRequest {
  string vaultName = 1;
}
message InfoReply {
  string vaultName = 1;
  bytes body = 2;
}

// ==== PackRequest ==== //
message PackRequest {
  string vaultName = 1;
  bytes body = 2;
}
message PackReply {
  string vaultName = 1;
  bytes body = 2;
}

// ==== VaultNamesRequest ==== //
message VaultNamesReply {
  repeated string vault_name_list = 1;
}
